syntax = "proto3";
package lava.plans;

import "gogoproto/gogo.proto";
import "lava/plans/params.proto";
import "lava/common/fixationEntry.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/lavanet/lava/x/plans/types";

// GenesisState defines the plan module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated lava.common.RawMessage plansFS = 2 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
