syntax = "proto3";
package lavanet.lava.packages;

option go_package = "github.com/lavanet/lava/x/packages/types";
option (gogoproto.equal_all) = true;
import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

message Package {
    string index = 1;
    uint64 duration = 2; // duration of the package's subscription in months
    uint64 block = 3; // the epoch that this package was created
    cosmos.base.v1beta1.Coin price = 4 [(gogoproto.nullable) = false]; // package price (in ulava)
    uint64 compute_units = 5; // max CU for the whole package duration
    uint64 compute_units_per_epoch = 6; // max CU per epoch for the whole package duration
    uint64 servicers_to_pair = 7; // max providers to be paired in an epoch
    bool allow_overuse = 8; // allow CU overuse flag
    uint64 overuse_rate = 9; // price of CU overuse
    uint64 subscriptions = 10; // the amount of users currently subscribed to this package
    string name = 11; // package name (non-unique "human" name)
    string description = 12; // package description (for humans)
    string type = 13; // package type
    uint64 annual_discount_percentage = 14; // discount for buying the package for a year
}